# Task-2.10

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Threads_Calculator.h
src/tests/: CMakeLists.txt  tests.cpp
